--- a/idcard.html
+++ b/idcard.html
@@ -1,301 +1,203 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Noorussalam Madrasa — ID Card Generator</title>
-
-  <!-- Bootstrap -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ID Card Generator | Noorussalam Madrasa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Nunito font for a soft premium look -->
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-
   <style>
-    :root{
-      --primary: #0b5ed7;
-      --primary-dark: #0849a2;
-      --card-w: 328px;  /* ~86mm */
-      --card-h: 205px;  /* ~54mm */
-      --watermark-url: "/mnt/data/nsm logo.jpeg"; /* your uploaded logo path */
-    }
-
-    html,body { height:100%; margin:0; }
     body {
-      font-family: "Nunito", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(140deg, var(--primary) 0%, #6fb6ff 60%, #dff1ff 100%);
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:28px;
+      background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 30px;
     }
-
-    /* Form card */
     .id-form {
-      width:100%;
-      max-width:500px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.98), #ffffff);
-      border-radius:18px;
-      padding:28px;
-      box-shadow: 0 12px 30px rgba(3,34,63,0.18);
-      text-align:center;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+      padding: 30px;
+      width: 100%;
+      max-width: 420px;
+      text-align: center;
+      margin-bottom: 40px;
+      animation: fadeIn 0.8s ease;
     }
-    .id-form img { margin-bottom:8px; }
-    .id-form h1 { font-size:1.06rem; color:var(--primary); margin:6px 0 6px; letter-spacing:0.6px; }
-    .id-form p { color:#475569; margin-bottom:18px; }
-
-    .form-control { height:46px; border-radius:10px; }
-    .btn-generate {
-      background: linear-gradient(90deg,var(--primary),#167bff);
-      color:#fff;
-      border:0;
-      border-radius:10px;
-      height:46px;
-      font-weight:700;
-      box-shadow: 0 8px 22px rgba(11,94,215,0.24);
+    .id-form h2 {
+      color: #0b5ed7;
+      font-weight: 700;
+      margin-bottom: 15px;
     }
-    .btn-generate:hover { transform: translateY(-2px); background: var(--primary-dark); }
-
-    small.hint { display:block; margin-top:10px; color:#6b7280; font-size:13px; }
-
-    /* responsive */
-    @media (max-width:520px){
-      .id-form { padding:20px; }
+    .id-form p {
+      color: #6c757d;
+      font-size: 14px;
+      margin-bottom: 25px;
+    }
+    .id-form button {
+      background: #0b5ed7;
+      border: none;
+      padding: 10px 0;
+      width: 100%;
+      border-radius: 8px;
+      font-weight: 600;
+      color: #fff;
+      transition: all 0.3s ease;
+    }
+    .id-form button:hover {
+      background: #0849a2;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
 
+  <!-- Form -->
   <div class="id-form">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" alt="Noorussalam logo" width="96">
-    <h1>NOORUSSALAM MADRASA</h1>
-    <p>Enter Class and Roll Number to generate the ID card (opens in a new tab)</p>
-
-    <form id="idForm" class="mt-3">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
+    <h2>NOORUSSALAM MADRASA</h2>
+    <p>Enter your Class and Roll Number to generate your ID card</p>
+    <form id="idForm">
       <div class="mb-3 text-start">
         <label class="form-label">Class</label>
-        <input name="class" class="form-control" placeholder="e.g. 7A or 8" required>
+        <input type="text" name="class" class="form-control" placeholder="Enter Class" required>
       </div>
-
       <div class="mb-3 text-start">
         <label class="form-label">Roll Number</label>
-        <input name="roll" class="form-control" placeholder="e.g. 12" required inputmode="numeric" pattern="[0-9]*">
+        <input type="text" name="roll" class="form-control" placeholder="Enter Roll Number" required>
       </div>
-
-      <button type="submit" class="btn btn-generate w-100">Generate Digital ID Card</button>
-      <small class="hint">Printed size: CR-80 (86 × 54 mm). Use the Print button in the new tab for best results.</small>
+      <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
 
-<script>
-/* ========= Replace SCRIPT_URL with your deployed Apps Script URL if different ========= */
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
 
-/* Escape to avoid injection in template */
-function escapeHtml(str){
-  if (str === null || str === undefined) return '';
-  return String(str)
-    .replaceAll('&','&amp;')
-    .replaceAll('<','&lt;')
-    .replaceAll('>','&gt;')
-    .replaceAll('"','&quot;')
-    .replaceAll("'",'&#39;');
-}
+    document.getElementById('idForm').addEventListener('submit', e => {
+      e.preventDefault();
+      const formData = new FormData(e.target);
+      const classVal = formData.get('class');
+      const rollVal = formData.get('roll');
 
-document.getElementById('idForm').addEventListener('submit', async (e) => {
-  e.preventDefault();
-  const fd = new FormData(e.target);
-  const cls = (fd.get('class') || '').toString().trim();
-  const roll = (fd.get('roll') || '').toString().trim();
-  if (!cls || !roll) { alert('Please enter class and roll number.'); return; }
+      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-  // open blank tab first (avoids popup blocking)
-  const win = window.open('', '_blank');
-  win.document.write(`<div style="font-family:Nunito,Arial,sans-serif;text-align:center;padding:40px;color:${'#0b5ed7'};"><h3>Loading ID Card...</h3></div>`);
+      const newWin = window.open("", "_blank");
+      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;'>Loading ID Card...</h3>");
 
-  const url = `${SCRIPT_URL}?class=${encodeURIComponent(cls)}&roll=${encodeURIComponent(roll)}`;
+      fetch(url)
+        .then(res => res.json())
+        .then(data => {
+          if (data.result === 'success') {
+            const s = data.student;
+            const qrData = `UID: ${s.UID}, Admission: ${s.AdmissionNumber}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
+            const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
 
-  try {
-    const res = await fetch(url);
-    const data = await res.json();
-
-    if (!data || data.result !== 'success') {
-      const msg = data && data.message ? data.message : 'Student not found or server error.';
-      win.document.body.innerHTML = `<div style="font-family:Nunito,Arial,sans-serif;padding:40px;text-align:center;color:#b91c1c;"><h3>${escapeHtml(msg)}</h3></div>`;
-      return;
-    }
-
-    const s = data.student || {};
-    s.FullName = s.FullName || 'STUDENT NAME';
-    s.UID = s.UID || '';
-    s.AdmissionNumber = s.AdmissionNumber || '';
-    s.FatherName = s.FatherName || '';
-    s.ClassLevel = s.ClassLevel || cls;
-    s.RollNumber = s.RollNumber || roll;
-    s.Phone = s.Phone || '';
-    s.Address = s.Address || '';
-    s.PhotoURL = s.PhotoURL || 'https://via.placeholder.com/200';
-
-    // Build new-tab HTML: no QR code, full-card watermark using uploaded path (/mnt/data/nsm logo.jpeg)
-    const cardHtml = `<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>${escapeHtml(s.FullName)} — ID Card</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    :root { --primary: #0b5ed7; --card-w: 328px; --card-h:205px; }
-    html,body{ height:100%; margin:0; }
-    body{
-      font-family: 'Nunito', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: #eef4ff;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:28px;
-    }
-
-    /* Print only the card - hide controls */
-    @media print {
-      body * { visibility: hidden; }
-      #idcard, #idcard * { visibility: visible; }
-      #idcard { position: absolute; left:50%; top:10px; transform: translateX(-50%); }
-    }
-
-    /* Real CR-80 card */
-    .id-card {
-      width: var(--card-w);
-      height: var(--card-h);
-      border-radius:14px;
-      background: linear-gradient(180deg, #ffffff 0%, #f7fbff 100%);
-      border: 3px solid var(--primary);
-      box-shadow:
-        0 12px 30px rgba(2,6,23,0.18),
-        inset 0 0 20px rgba(11,94,215,0.02);
-      overflow: hidden;
-      position: relative;
-      text-align: center;
-    }
-
-    /* Full-card circular watermark (soft) - using uploaded local path */
-    .watermark {
-      position: absolute;
-      width: 170px;
-      height: 170px;
-      top: 46%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-image: url('/mnt/data/nsm logo.jpeg');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      opacity: 0.10;
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 0;
-      filter: blur(0.2px);
-    }
-
-    .id-header {
-      background: linear-gradient(90deg, var(--primary), #6fb6ff);
-      padding: 8px 6px;
-      color: #fff;
-      z-index: 2;
-      position: relative;
-    }
-    .id-header h4 { margin:0; font-size:13px; font-weight:700; letter-spacing:0.4px; }
-    .id-header small { display:block; font-size:9px; opacity:0.95; margin-top:2px; }
-
-    .photo {
-      width:78px;
-      height:78px;
-      border-radius:50%;
-      object-fit:cover;
-      border:3px solid #fff;
-      margin-top:8px;
-      box-shadow: 0 4px 12px rgba(2,6,23,0.18);
-      z-index:2;
-      position: relative;
-    }
-
-    .fullname { color:var(--primary); font-weight:700; margin-top:6px; font-size:14px; z-index:2; position: relative; }
-    .details { text-align:left; padding:0 14px; margin-top:6px; font-size:10px; line-height:12px; z-index:2; position: relative; }
-    .details p { margin:3px 0; color:#1f2937; }
-
-    .controls { display:flex; gap:12px; justify-content:center; margin-top:14px; z-index:3; position:relative; }
-    .btn-print, .btn-home { padding:8px 14px; border-radius:22px; font-weight:700; border:0; cursor:pointer; }
-    .btn-print { background:#fff; color:var(--primary); border:2px solid var(--primary); }
-    .btn-home { background:var(--primary); color:#fff; }
-
-    @media (max-width:420px){
-      body{ padding:12px; }
-      .id-card{ transform: scale(0.92); transform-origin: center top; }
-    }
-  </style>
-</head>
-<body>
-
-  <div id="idcard" class="id-card" role="region" aria-label="Student ID card">
-    <div class="watermark" aria-hidden="true"></div>
-
-    <div class="id-header" role="heading" aria-level="1">
-      <h4>NOORUSSALAM SECONDARY MADRASA</h4>
-      <small>Kambippalam - Kerala Estate</small>
-      <small>Under SKIMVB | Reg No: 6110</small>
-    </div>
-
-    <img src="${escapeHtml(s.PhotoURL)}" alt="Student photo" class="photo" />
-
-    <div class="fullname">${escapeHtml(s.FullName)}</div>
-
-    <div class="details" aria-live="polite">
-      <p><strong>UID:</strong> ${escapeHtml(s.UID)}</p>
-      <p><strong>Admission No:</strong> ${escapeHtml(s.AdmissionNumber)}</p>
-      <p><strong>Father's Name:</strong> ${escapeHtml(s.FatherName)}</p>
-      <p><strong>Class:</strong> ${escapeHtml(s.ClassLevel)}</p>
-      <p><strong>Roll No:</strong> ${escapeHtml(s.RollNumber)}</p>
-      <p><strong>Phone:</strong> ${escapeHtml(s.Phone)}</p>
-      <p><strong>Address:</strong> ${escapeHtml(s.Address)}</p>
-    </div>
-
-  </div>
-
-  <div class="controls" role="group" aria-label="ID controls">
-    <button class="btn-print" onclick="window.print();">Print ID Card</button>
-    <button class="btn-home" onclick="window.location.href='${location.pathname}';">Back to Home</button>
-  </div>
-
-</body>
-</html>`;
-
-    // write into new tab and close doc
-    win.document.open();
-    win.document.write(cardHtml);
-    win.document.close();
-
-  } catch (err) {
-    console.error(err);
-    win.document.body.innerHTML = `<div style="font-family:Nunito,Arial,sans-serif;padding:28px;text-align:center;color:#b91c1c;">
-      <h3>Error fetching data</h3><p>Check Apps Script deployment or network. See console for details.</p></div>`;
-  }
-});
-
-/* helper for safety */
-function escapeHtml(str){
-  if (str === null || str === undefined) return '';
-  return String(str)
-    .replaceAll('&','&amp;')
-    .replaceAll('<','&lt;')
-    .replaceAll('>','&gt;')
-    .replaceAll('"','&quot;')
-    .replaceAll("'",'&#39;');
-}
-</script>
-
+            const html = `
+              <html>
+              <head>
+                <title>${s.FullName} | ID Card</title>
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+                <style>
+                  body {
+                    background: #f0f4ff;
+                    font-family: 'Poppins', sans-serif;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 100vh;
+                  }
+                  .id-card {
+                    width: 380px;
+                    background: white;
+                    border-radius: 20px;
+                    box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+                    overflow: hidden;
+                    text-align: center;
+                    border: 5px solid #0b5ed7;
+                  }
+                  .id-header {
+                    background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+                    color: white;
+                    padding: 12px;
+                  }
+                  .id-header h5 {
+                    margin: 0;
+                    font-size: 18px;
+                    font-weight: 700;
+                    line-height: 1.3;
+                  }
+                  .id-header small {
+                    font-size: 12px;
+                    display: block;
+                    opacity: 0.9;
+                  }
+                  .id-body {
+                    padding: 20px;
+                  }
+                  .id-photo {
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    margin-top: -20px; /* lowered slightly */
+                    border: 4px solid white;
+                    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+                  }
+                  .id-body h5 { color: #0b5ed7; margin-top: 10px; font-weight: 700; }
+                  .id-body p { margin: 3px 0; color: #333; font-size: 14px; }
+                  .qr-code { margin-top: 10px; }
+                  .academic-year {
+                    font-weight: 600;
+                    color: #0b5ed7;
+                    margin-top: 8px;
+                    font-size: 15px;
+                    letter-spacing: 0.5px;
+                  }
+                </style>
+              </head>
+              <body>
+                <div class="id-card">
+                  <div class="id-header">
+                    <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+                    <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
+                    <small>Under SKIMVB, Reg No:6110</small>
+                  </div>
+                  <div class="id-body">
+                    <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
+                    <h5>${s.FullName}</h5>
+                    <p><strong>UID:</strong> ${s.UID}</p>
+                    <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
+                    <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
+                    <p><strong>Class:</strong> ${s.ClassLevel}</p>
+                    <p><strong>Roll No:</strong> ${s.RollNumber}</p>
+                    <p><strong>Phone:</strong> ${s.Phone}</p>
+                    <div class="qr-code">
+                      <img src="${qrURL}" alt="QR Code">
+                      <p class="academic-year">Academic Year: 2025–26</p>
+                    </div>
+                  </div>
+                </div>
+              </body>
+              </html>
+            `;
+            newWin.document.open();
+            newWin.document.write(html);
+            newWin.document.close();
+          } else {
+            newWin.document.write(`<h3 style='color:red;text-align:center;'>${data.message}</h3>`);
+          }
+        })
+        .catch(() => {
+          newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
+        });
+    });
+  </script>
 </body>
 </html>
