--- a/idcard.html
+++ b/idcard.html
@@ -1,11 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ID Card Generator | Noorussalam Madrasa</title>
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Merienda:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
     body {
       background: linear-gradient(135deg, #0b5ed7 0%, #74b9ff 100%);
@@ -17,6 +22,8 @@
       justify-content: center;
       padding: 30px;
     }
+
+    /* FORM */
     .id-form {
       background: #fff;
       border-radius: 15px;
@@ -33,11 +40,6 @@
       font-weight: 700;
       margin-bottom: 15px;
     }
-    .id-form p {
-      color: #6c757d;
-      font-size: 14px;
-      margin-bottom: 25px;
-    }
     .id-form button {
       background: #0b5ed7;
       border: none;
@@ -46,158 +48,201 @@
       border-radius: 8px;
       font-weight: 600;
       color: #fff;
-      transition: all 0.3s ease;
     }
-    .id-form button:hover {
-      background: #0849a2;
-    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
+
 <body>
 
-  <!-- Form -->
+  <!-- Input Form -->
   <div class="id-form">
-    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
+    <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80">
     <h2>NOORUSSALAM MADRASA</h2>
-    <p>Enter your Class and Roll Number to generate your ID card</p>
+    <p>Enter Class & Roll Number to generate the ID Card</p>
+
     <form id="idForm">
       <div class="mb-3 text-start">
         <label class="form-label">Class</label>
-        <input type="text" name="class" class="form-control" placeholder="Enter Class" required>
+        <input type="text" name="class" class="form-control" required>
       </div>
+
       <div class="mb-3 text-start">
         <label class="form-label">Roll Number</label>
-        <input type="text" name="roll" class="form-control" placeholder="Enter Roll Number" required>
+        <input type="text" name="roll" class="form-control" required>
       </div>
+
       <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
 
-  <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
+<script>
+const scriptURL =
+ "https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec";
 
-    document.getElementById('idForm').addEventListener('submit', e => {
-      e.preventDefault();
-      const formData = new FormData(e.target);
-      const classVal = formData.get('class');
-      const rollVal = formData.get('roll');
+document.getElementById('idForm').addEventListener('submit', e => {
+  e.preventDefault();
 
-      const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
+  const formData = new FormData(e.target);
+  const classVal = formData.get('class');
+  const rollVal = formData.get('roll');
 
-      const newWin = window.open("", "_blank");
-      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;'>Loading ID Card...</h3>");
+  const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-      fetch(url)
-        .then(res => res.json())
-        .then(data => {
-          if (data.result === 'success') {
-            const s = data.student;
-            const qrData = `UID: ${s.UID}, Admission: ${s.AdmissionNumber}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
-            const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
+  const newWin = window.open("", "_blank");
+  newWin.document.write("<h3 style='text-align:center;color:#0b5ed7;'>Loading ID Card...</h3>");
 
-            const html = `
-              <html>
-              <head>
-                <title>${s.FullName} | ID Card</title>
-                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-                <style>
-                  body {
-                    background: #f0f4ff;
-                    font-family: 'Poppins', sans-serif;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    height: 100vh;
-                  }
-                  .id-card {
-                    width: 380px;
-                    background: white;
-                    border-radius: 20px;
-                    box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-                    overflow: hidden;
-                    text-align: center;
-                    border: 5px solid #0b5ed7;
-                  }
-                  .id-header {
-                    background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-                    color: white;
-                    padding: 12px;
-                  }
-                  .id-header h5 {
-                    margin: 0;
-                    font-size: 18px;
-                    font-weight: 700;
-                    line-height: 1.3;
-                  }
-                  .id-header small {
-                    font-size: 12px;
-                    display: block;
-                    opacity: 0.9;
-                  }
-                  .id-body {
-                    padding: 20px;
-                  }
-                  .id-photo {
-                    width: 100px;
-                    height: 100px;
-                    border-radius: 50%;
-                    object-fit: cover;
-                    margin-top: -20px; /* lowered slightly */
-                    border: 4px solid white;
-                    box-shadow: 0 0 10px rgba(0,0,0,0.3);
-                  }
-                  .id-body h5 { color: #0b5ed7; margin-top: 10px; font-weight: 700; }
-                  .id-body p { margin: 3px 0; color: #333; font-size: 14px; }
-                  .qr-code { margin-top: 10px; }
-                  .academic-year {
-                    font-weight: 600;
-                    color: #0b5ed7;
-                    margin-top: 8px;
-                    font-size: 15px;
-                    letter-spacing: 0.5px;
-                  }
-                </style>
-              </head>
-              <body>
-                <div class="id-card">
-                  <div class="id-header">
-                    <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-                    <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
-                    <small>Under SKIMVB, Reg No:6110</small>
-                  </div>
-                  <div class="id-body">
-                    <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
-                    <h5>${s.FullName}</h5>
-                    <p><strong>UID:</strong> ${s.UID}</p>
-                    <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
-                    <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
-                    <p><strong>Class:</strong> ${s.ClassLevel}</p>
-                    <p><strong>Roll No:</strong> ${s.RollNumber}</p>
-                    <p><strong>Phone:</strong> ${s.Phone}</p>
-                    <div class="qr-code">
-                      <img src="${qrURL}" alt="QR Code">
-                      <p class="academic-year">Academic Year: 2025–26</p>
-                    </div>
-                  </div>
-                </div>
-              </body>
-              </html>
-            `;
-            newWin.document.open();
-            newWin.document.write(html);
-            newWin.document.close();
-          } else {
-            newWin.document.write(`<h3 style='color:red;text-align:center;'>${data.message}</h3>`);
-          }
-        })
-        .catch(() => {
-          newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
-        });
+  fetch(url)
+    .then(res => res.json())
+    .then(data => {
+      if (data.result === 'success') {
+        const s = data.student;
+
+        const qrData = `UID:${s.UID}, Admission:${s.AdmissionNumber}, Name:${s.FullName}`;
+        const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=110x110`;
+
+        const html = `
+<!DOCTYPE html>
+<html>
+<head>
+  <title>${s.FullName} | ID Card</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      background: #eef3ff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+      font-family: 'Merienda', cursive;
+    }
+
+    /* ID CARD SIZE (Actual card size) */
+    .id-card {
+      width: 320px;
+      height: 520px;
+      background: white;
+      border-radius: 18px;
+      box-shadow: 0 6px 25px rgba(0,0,0,0.25);
+      border: 6px double #0b5ed7;  /* 3D Border */
+      position: relative;
+      overflow: hidden;
+      padding-bottom: 20px;
+    }
+
+    /* Logo Watermark */
+    .id-card::before {
+      content: "";
+      position: absolute;
+      background: url('https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png') center/60% no-repeat;
+      opacity: 0.08;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+
+    .content { position: relative; z-index: 5; }
+
+    .header {
+      background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+      padding: 10px;
+      text-align: center;
+      color: white;
+      border-bottom: 3px solid #0849a2;
+    }
+
+    .header h4 { margin: 0; font-size: 18px; font-weight: 700; }
+
+    .photo {
+      width: 110px;
+      height: 110px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 15px auto 5px;
+      display: block;
+      border: 4px solid #fff;
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+    }
+
+    p { margin: 3px 0; }
+
+    .btn-area {
+      margin-top: 15px;
+      text-align: center;
+    }
+
+    .btn-print, .btn-home {
+      padding: 8px 18px;
+      border-radius: 7px;
+      border: none;
+      color: #fff;
+      font-weight: 600;
+      margin: 4px;
+    }
+
+    .btn-print { background:#0b5ed7; }
+    .btn-home { background:#6c757d; }
+
+    /* HIDE BUTTONS IN PRINT */
+    @media print {
+      .btn-area { display: none !important; }
+      body { background: white; }
+    }
+  </style>
+</head>
+
+<body>
+
+<div class="id-card">
+  <div class="content">
+    <div class="header">
+      <h4>NOORUSSALAM SECONDARY MADRASA</h4>
+      <small>Kambippalam Kerala Estate</small>
+    </div>
+
+    <img src="${s.PhotoURL || 'https://via.placeholder.com/120'}" class="photo">
+
+    <p><b>Name:</b> ${s.FullName}</p>
+    <p><b>UID:</b> ${s.UID}</p>
+    <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+    <p><b>Father:</b> ${s.FatherName}</p>
+    <p><b>Class:</b> ${s.ClassLevel}</p>
+    <p><b>Roll No:</b> ${s.RollNumber}</p>
+    <p><b>Phone:</b> ${s.Phone}</p>
+
+    <div style="text-align:center; margin-top:10px;">
+      <img src="${qrURL}">
+    </div>
+
+    <div class="btn-area">
+      <button class="btn-print" onclick="window.print()">Print ID Card</button>
+      <button class="btn-home" onclick="window.location.href='/'">Back Home</button>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
+        `;
+
+        newWin.document.open();
+        newWin.document.write(html);
+        newWin.document.close();
+      }
     });
-  </script>
+});
+</script>
+
 </body>
 </html>
