--- a/idcard.html
+++ b/idcard.html
@@ -63,6 +63,7 @@
     <img src="https://i.ibb.co/7Jw5TBJg/NSM-LOGO-PNG.png" width="80" alt="logo">
     <h2>NOORUSSALAM MADRASA</h2>
     <p>Enter your Class and Roll Number to generate your ID card</p>
+
     <form id="idForm">
       <div class="mb-3 text-start">
         <label class="form-label">Class</label>
@@ -75,6 +76,9 @@
       <button type="submit">Generate Digital ID Card</button>
     </form>
   </div>
+
+  <!-- HTML2CANVAS for PNG Download -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
   <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbzwNp2D-Kg6yGaiGaP5npYiyGXRoGI3eTrf_DdHCXo-4Lo2mw2kLQEBucmNl5VkQs8R/exec';
@@ -103,24 +107,35 @@
               <head>
                 <title>${s.FullName} | ID Card</title>
                 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
                 <style>
-
-                  @media print {
-                    body {
-                      -webkit-print-color-adjust: exact !important;
-                      print-color-adjust: exact !important;
-                    }
-                    .print-btn { display: none !important; }
-                  }
-
                   body {
-                    background: #f0f4ff;
+                    background: #eef3ff;
                     font-family: 'Poppins', sans-serif;
                     display: flex;
+                    flex-direction: column;
                     align-items: center;
-                    justify-content: center;
-                    height: 100vh;
+                    padding: 30px;
                   }
+
+                  .home-btn, .download-btn {
+                    padding: 10px 20px;
+                    border: none;
+                    border-radius: 10px;
+                    font-size: 16px;
+                    margin-bottom: 15px;
+                    width: 260px;
+                    color: white;
+                    cursor: pointer;
+                  }
+
+                  .home-btn { background: #6c757d; }
+                  .home-btn:hover { background: #555; }
+
+                  .download-btn { background: #0b5ed7; }
+                  .download-btn:hover { background: #0849a2; }
+
                   .id-card {
                     width: 380px;
                     background: white;
@@ -129,26 +144,15 @@
                     overflow: hidden;
                     text-align: center;
                     border: 5px solid #0b5ed7;
+                    margin-top: 10px;
                   }
+
                   .id-header {
                     background: linear-gradient(90deg, #0b5ed7, #74b9ff);
                     color: white;
                     padding: 12px;
                   }
-                  .id-header h5 {
-                    margin: 0;
-                    font-size: 18px;
-                    font-weight: 700;
-                    line-height: 1.3;
-                  }
-                  .id-header small {
-                    font-size: 12px;
-                    display: block;
-                    opacity: 0.9;
-                  }
-                  .id-body {
-                    padding: 20px;
-                  }
+
                   .id-photo {
                     width: 100px;
                     height: 100px;
@@ -158,58 +162,54 @@
                     border: 4px solid white;
                     box-shadow: 0 0 10px rgba(0,0,0,0.3);
                   }
-                  .id-body h5 { color: #0b5ed7; margin-top: 10px; font-weight: 700; }
-                  .id-body p { margin: 3px 0; color: #333; font-size: 14px; }
-                  .qr-code { margin-top: 10px; }
-                  .academic-year {
-                    font-weight: 600;
-                    color: #0b5ed7;
-                    margin-top: 8px;
-                    font-size: 15px;
-                    letter-spacing: 0.5px;
-                  }
 
-                  .print-btn {
-                    margin-top: 20px;
-                    padding: 10px 20px;
-                    background: #0b5ed7;
-                    color: white;
-                    border: none;
-                    border-radius: 10px;
-                    font-size: 16px;
-                  }
+                  .id-body { padding: 20px; }
+                  .qr-code { margin-top: 10px; }
 
                 </style>
               </head>
+
               <body>
 
-                <div>
-                  <button class="print-btn" onclick="window.print()">Print ID Card</button>
+                <button class="home-btn" onclick="window.location.href='index.html'">⬅ Back to Home</button>
+                <button class="download-btn" onclick="downloadCard()">⬇ Download ID Card</button>
 
-                  <div class="id-card">
-                    <div class="id-header">
-                      <h5>NOORUSSALAM SECONDARY MADRASA</h5>
-                      <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
-                      <small>Under SKIMVB, Reg No:6110</small>
-                    </div>
-                    <div class="id-body">
-                      <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
+                <div id="card" class="id-card">
+                  <div class="id-header">
+                    <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+                    <small>Kambippalam Kerala Estate · Malappuram Dt.</small>
+                    <small>Email: noorussalam6110@gmail.com · Reg No: 6110</small>
+                  </div>
 
-                      <h5>${s.FullName}</h5>
-                      <p><strong>UID:</strong> ${s.UID}</p>
-                      <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
-                      <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
-                      <p><strong>Class:</strong> ${s.ClassLevel}</p>
-                      <p><strong>Roll No:</strong> ${s.RollNumber}</p>
-                      <p><strong>Phone:</strong> ${s.Phone}</p>
+                  <div class="id-body">
+                    <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" class="id-photo">
 
-                      <div class="qr-code">
-                        <img src="${qrURL}">
-                        <p class="academic-year">Academic Year: 2025–26</p>
-                      </div>
+                    <h5 style="color:#0b5ed7;margin-top:10px;">${s.FullName}</h5>
+                    <p><b>UID:</b> ${s.UID}</p>
+                    <p><b>Admission No:</b> ${s.AdmissionNumber}</p>
+                    <p><b>Father's Name:</b> ${s.FatherName}</p>
+                    <p><b>Class:</b> ${s.ClassLevel}</p>
+                    <p><b>Roll No:</b> ${s.RollNumber}</p>
+                    <p><b>Phone:</b> ${s.Phone}</p>
+
+                    <div class="qr-code">
+                      <img src="${qrURL}">
+                      <p style="margin-top:5px;font-weight:600;color:#0b5ed7;">Academic Year: 2025–26</p>
                     </div>
                   </div>
                 </div>
+
+                <script>
+                  function downloadCard() {
+                    const card = document.getElementById("card");
+                    html2canvas(card).then(canvas => {
+                      const link = document.createElement("a");
+                      link.download = "${s.FullName}-IDCard.png";
+                      link.href = canvas.toDataURL();
+                      link.click();
+                    });
+                  }
+                </script>
 
               </body>
               </html>
