--- a/index.html
+++ b/index.html
@@ -573,6 +573,12 @@
     .hero-premium .star { animation: none; }
   }
 </style>
+<div class="flash-news-container">
+  <div class="flash-label">🔴 FLASH NEWS</div>
+  <div class="news-ticker">
+    Admission started | Annual Day on December 25 | Exam timetable published | New batch starting soon |
+  </div>
+</div>
 
 
 <!-- 🌟 Class Toppers Section -->
@@ -1142,6 +1148,7 @@
 
 </body>
 </html>
+
 
 
 
