--- a/index.html
+++ b/index.html
@@ -572,13 +572,47 @@
     .hero-premium .crescent path,
     .hero-premium .star { animation: none; }
   }
-</style>
-<div class="flash-news-container">
-  <div class="flash-label">🔴 FLASH NEWS</div>
-  <div class="news-ticker">
-    Admission started | Annual Day on December 25 | Exam timetable published | New batch starting soon |
+<div class="flash-container">
+  <div class="flash-title">🔴 FLASH NEWS</div>
+
+  <div class="flash-ticker">
+    Admission started | Annual Day on December 25 | Exam timetable published | New batch starts soon |
   </div>
 </div>
+
+<style>
+  .flash-container {
+    background: #0d6efd;
+    padding: 10px 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .flash-title {
+    background: #dc3545;
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-weight: 700;
+    white-space: nowrap;
+    margin-right: 10px;
+  }
+
+  .flash-ticker {
+    white-space: nowrap;
+    display: inline-block;
+    animation: leftScroll 15s linear infinite;
+    font-size: 16px;
+  }
+
+  @keyframes leftScroll {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
+  }
+</style>
+
 
 
 <!-- 🌟 Class Toppers Section -->
@@ -1148,6 +1182,7 @@
 
 </body>
 </html>
+
 
 
 
