--- a/index.html
+++ b/index.html
@@ -572,47 +572,32 @@
     .hero-premium .crescent path,
     .hero-premium .star { animation: none; }
   }
-<div class="flash-container">
-  <div class="flash-title">🔴 FLASH NEWS</div>
 
-  <div class="flash-ticker">
+
+<div style="background:#0d6efd; padding:10px 0; overflow:hidden; white-space:nowrap;">
+  
+  <span style="background:#dc3545; padding:8px 15px; border-radius:5px; font-weight:bold; color:white;">
+    🔴 FLASH NEWS
+  </span>
+
+  <span id="flashTicker" style="
+      display:inline-block;
+      padding-left:20px;
+      font-size:16px;
+      color:white;
+      animation:flashMove 12s linear infinite;
+  ">
     Admission started | Annual Day on December 25 | Exam timetable published | New batch starts soon |
-  </div>
+  </span>
+
 </div>
 
 <style>
-  .flash-container {
-    background: #0d6efd;
-    padding: 10px 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    color: white;
-    font-family: 'Poppins', sans-serif;
-  }
-
-  .flash-title {
-    background: #dc3545;
-    padding: 8px 15px;
-    border-radius: 5px;
-    font-weight: 700;
-    white-space: nowrap;
-    margin-right: 10px;
-  }
-
-  .flash-ticker {
-    white-space: nowrap;
-    display: inline-block;
-    animation: leftScroll 15s linear infinite;
-    font-size: 16px;
-  }
-
-  @keyframes leftScroll {
-    0% { transform: translateX(-100%); }
-    100% { transform: translateX(100%); }
-  }
+@keyframes flashMove {
+  0%   { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
+}
 </style>
-
 
 
 <!-- 🌟 Class Toppers Section -->
@@ -1182,6 +1167,7 @@
 
 </body>
 </html>
+
 
 
 
