--- a/index.html
+++ b/index.html
@@ -574,28 +574,49 @@
   }
 
 
-<div style="background:#0d6efd; padding:10px 0; overflow:hidden; white-space:nowrap;">
-  
-  <span style="background:#dc3545; padding:8px 15px; border-radius:5px; font-weight:bold; color:white;">
+<!-- 🔥 FLASH MESSAGE (BLINK EFFECT) -->
+<div style="
+  background:#dc3545;
+  color:white;
+  padding:12px;
+  text-align:center;
+  font-size:18px;
+  font-weight:600;
+  animation: blinkMsg 1.2s infinite;
+  font-family:'Poppins', sans-serif;">
+  ⚠ Important Notice: Admission started! Apply now.
+</div>
+
+<style>
+@keyframes blinkMsg {
+  0% { opacity:1; }
+  50% { opacity:0.2; }
+  100% { opacity:1; }
+}
+</style>
+
+
+<!-- 🔵 FLASH NEWS SCROLLING (Below Flash Message) -->
+<div style="background:#0d6efd; padding:10px 0; overflow:hidden; white-space:nowrap; display:flex; align-items:center; font-family:'Poppins', sans-serif;">
+
+  <span style="background:#dc3545; padding:8px 15px; border-radius:5px; font-weight:bold; margin-right:10px; color:white;">
     🔴 FLASH NEWS
   </span>
 
-  <span id="flashTicker" style="
+  <span style="
       display:inline-block;
-      padding-left:20px;
       font-size:16px;
       color:white;
-      animation:flashMove 12s linear infinite;
-  ">
-    Admission started | Annual Day on December 25 | Exam timetable published | New batch starts soon |
+      animation: scrollLeft 15s linear infinite;">
+    Annual Day on December 25 | Exam Timetable Published | Teachers Training Program Tomorrow | New Batch Starts Soon |
   </span>
 
 </div>
 
 <style>
-@keyframes flashMove {
-  0%   { transform: translateX(-100%); }
-  100% { transform: translateX(100%); }
+@keyframes scrollLeft {
+  0%   { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
 }
 </style>
 
@@ -1167,6 +1188,7 @@
 
 </body>
 </html>
+
 
 
 
