--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
   text-align:center;
   font-size:18px;
   font-weight:600;
-  animation: blinkMsg 1.2s infinite;
+  animation: blinkMsg 1.5s infinite;
   font-family:'Poppins', sans-serif;">
   ⚠ Important Notice: Admission started! Apply now.
 </div>
@@ -590,35 +590,87 @@
 <style>
 @keyframes blinkMsg {
   0% { opacity:1; }
-  50% { opacity:0.2; }
+  50% { opacity:0.3; }
   100% { opacity:1; }
 }
 </style>
 
-
 <!-- 🔵 FLASH NEWS SCROLLING (Below Flash Message) -->
-<div style="background:#0d6efd; padding:10px 0; overflow:hidden; white-space:nowrap; display:flex; align-items:center; font-family:'Poppins', sans-serif;">
-
-  <span style="background:#dc3545; padding:8px 15px; border-radius:5px; font-weight:bold; margin-right:10px; color:white;">
-    🔴 FLASH NEWS
-  </span>
-
-  <span style="
-      display:inline-block;
-      font-size:16px;
-      color:white;
-      animation: scrollLeft 15s linear infinite;">
+<div class="flash-news-container">
+  <span class="flash-label">🔴 FLASH NEWS</span>
+  <span class="flash-ticker" id="flashTicker">
     Annual Day on December 25 | Exam Timetable Published | Teachers Training Program Tomorrow | New Batch Starts Soon |
   </span>
-
 </div>
 
 <style>
+/* FLASH NEWS CONTAINER */
+.flash-news-container {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 10px 0;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(90deg, #0d6efd, #0a58ca);
+}
+
+/* FLASH LABEL */
+.flash-label {
+  background: #dc3545;
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-weight: bold;
+  margin-right: 10px;
+  color: white;
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+
+/* FLASH TICKER */
+.flash-ticker {
+  display: inline-block;
+  font-size: 16px;
+  color: white;
+  animation: scrollLeft 30s linear infinite;
+  animation-play-state: running; /* running by default */
+}
+
+/* SCROLL ANIMATION */
 @keyframes scrollLeft {
-  0%   { transform: translateX(100%); }
+  0% { transform: translateX(100%); }
   100% { transform: translateX(-100%); }
 }
+
+/* HOVER PAUSE */
+.flash-ticker:hover {
+  animation-play-state: paused;
+}
+
+/* RESPONSIVE */
+@media screen and (max-width: 768px) {
+  .flash-label {
+    padding: 6px 10px;
+    font-size: 14px;
+  }
+  .flash-ticker {
+    font-size: 14px;
+  }
+}
 </style>
+
+<!-- TOUCH FRIENDLY PAUSE FOR MOBILE -->
+<script>
+const ticker = document.getElementById('flashTicker');
+
+ticker.addEventListener('touchstart', () => {
+  ticker.style.animationPlayState = 'paused';
+});
+
+ticker.addEventListener('touchend', () => {
+  ticker.style.animationPlayState = 'running';
+});
+</script>
 
 
 <!-- 🌟 Class Toppers Section -->
@@ -1188,6 +1240,7 @@
 
 </body>
 </html>
+
 
 
 
