--- a/index.html
+++ b/index.html
@@ -598,9 +598,11 @@
 <!-- 🔵 FLASH NEWS SCROLLING (Below Flash Message) -->
 <div class="flash-news-container">
   <span class="flash-label">🔴 FLASH NEWS</span>
-  <span class="flash-ticker" id="flashTicker">
-    Annual Day on December 25 | Exam Timetable Published | Teachers Training Program Tomorrow | New Batch Starts Soon |
-  </span>
+  <div class="flash-ticker-wrapper">
+    <span class="flash-ticker" id="flashTicker">
+      2025-26 വര്‍ഷത്തിലെ വാര്‍ഷിക പരീക്ഷ 2026 ജനുവരി 31, ഫെബ്രുവരി 1,2,10,11,12 തിയ്യതികളില്‍ |സമസ്ത നൂറാം വാര്‍ഷികം 2026 ഫെബ്രുവരി 4,5,6,7,8 തിയ്യതികളില്‍ കാസര്‍ഗോഡ് കുണിയയില്‍ നടക്കും | Exam Timetable Published |
+    </span>
+  </div>
 </div>
 
 <style>
@@ -627,13 +629,19 @@
   white-space: nowrap;
 }
 
+/* FLASH TICKER WRAPPER */
+.flash-ticker-wrapper {
+  overflow: hidden;
+  flex: 1; /* fills remaining space after label */
+}
+
 /* FLASH TICKER */
 .flash-ticker {
   display: inline-block;
   font-size: 16px;
   color: white;
   animation: scrollLeft 30s linear infinite;
-  animation-play-state: running; /* running by default */
+  animation-play-state: running; 
 }
 
 /* SCROLL ANIMATION */
@@ -671,7 +679,6 @@ ticker.addEventListener('touchend', () => {
   ticker.style.animationPlayState = 'running';
 });
 </script>
-
 
 <!-- 🌟 Class Toppers Section -->
 <section id="class-toppers" style="padding:80px 0; background:linear-gradient(135deg,#dce9ff,#ffffff); font-family:'Poppins',sans-serif; overflow:hidden; position:relative;">
@@ -1240,6 +1247,7 @@ ticker.addEventListener('touchend', () => {
 
 </body>
 </html>
+
 
 
 
