--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
         <li class="nav-item"><a class="nav-link" href="downloads.html" target="_blank">Downloads</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html" target="_blank">Login</a></li>
+        <li class="nav-item"><a class="nav-link" href="achivments.html" target="_blank">Achivments</a></li>
         <li class="nav-item"><a class="nav-link" href="library.html" target="_blank">Library</a></li>
         <li class="nav-item"><a class="nav-link active" href="alumni.html">Alumni</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
@@ -1247,6 +1248,7 @@ ticker.addEventListener('touchend', () => {
 
 </body>
 </html>
+
 
 
 
