--- a/result.html
+++ b/result.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ult<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -169,8 +169,8 @@
       <i class="fa-solid fa-graduation-cap"></i> Final Examination Result
     </a>
 
-    <a href="https://result.samastha.info/" class="btn btn-success">
-      <i class="fa-solid fa-book-open-reader"></i> Samastha Public Examination
+    <a href="resultpage.html" class="btn btn-success">
+      <i class="fa-solid fa-book-open-reader"></i> Toppers
     </a>
 
     <div class="text-center mt-3">
@@ -182,3 +182,4 @@
 
 </body>
 </html>
+
