--- a/result.html
+++ b/result.html
@@ -173,7 +173,7 @@ ult<!DOCTYPE html>
       <i class="fa-solid fa-book-open-reader"></i> Samastha Public Exam Result
     </a>
     
-    <a href="resultpage.html" class="btn btn-success">
+    <a href="toppers.html" class="btn btn-success">
       <i class="fa-solid fa-graduation-cap"></i> Toppers
     </a>
     
@@ -188,5 +188,6 @@ ult<!DOCTYPE html>
 
 </body>
 </html>
+
 
 
